language/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement
Rule 2     start -> variable
Rule 3     start -> empty
Rule 4     statement -> verb entity STRING
Rule 5     statement -> verb entity INTEGER
Rule 6     statement -> verb entity
Rule 7     statement -> verb STRING
Rule 8     statement -> verb
Rule 9     verb -> VIEW
Rule 10    verb -> GOTO
Rule 11    verb -> WHERE
Rule 12    verb -> RENT
Rule 13    verb -> LOGIN
Rule 14    verb -> DUE
Rule 15    verb -> BACK
Rule 16    verb -> HELP
Rule 17    verb -> SORT
Rule 18    verb -> EXIT
Rule 19    verb -> LOGOUT
Rule 20    verb -> RETURN
Rule 21    verb -> EDIT
Rule 22    verb -> DELETE
Rule 23    verb -> CREATE
Rule 24    verb -> REGISTER
Rule 25    entity -> SHELF
Rule 26    entity -> BOOK
Rule 27    entity -> LIBRARY
Rule 28    variable -> VARIABLE
Rule 29    empty -> <empty>

Terminals, with rules where they appear

BACK                 : 15
BOOK                 : 26
CREATE               : 23
DELETE               : 22
DUE                  : 14
EDIT                 : 21
EXIT                 : 18
GOTO                 : 10
HELP                 : 16
INTEGER              : 5
LIBRARY              : 27
LOGIN                : 13
LOGOUT               : 19
REGISTER             : 24
RENT                 : 12
RETURN               : 20
SHELF                : 25
SORT                 : 17
STRING               : 4 7
VARIABLE             : 28
VIEW                 : 9
WHERE                : 11
error                : 

Nonterminals, with rules where they appear

empty                : 3
entity               : 4 5 6
start                : 0
statement            : 1
variable             : 2
verb                 : 4 5 6 7 8

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement
    (2) start -> . variable
    (3) start -> . empty
    (4) statement -> . verb entity STRING
    (5) statement -> . verb entity INTEGER
    (6) statement -> . verb entity
    (7) statement -> . verb STRING
    (8) statement -> . verb
    (28) variable -> . VARIABLE
    (29) empty -> .
    (9) verb -> . VIEW
    (10) verb -> . GOTO
    (11) verb -> . WHERE
    (12) verb -> . RENT
    (13) verb -> . LOGIN
    (14) verb -> . DUE
    (15) verb -> . BACK
    (16) verb -> . HELP
    (17) verb -> . SORT
    (18) verb -> . EXIT
    (19) verb -> . LOGOUT
    (20) verb -> . RETURN
    (21) verb -> . EDIT
    (22) verb -> . DELETE
    (23) verb -> . CREATE
    (24) verb -> . REGISTER

    VARIABLE        shift and go to state 6
    $end            reduce using rule 29 (empty -> .)
    VIEW            shift and go to state 7
    GOTO            shift and go to state 8
    WHERE           shift and go to state 9
    RENT            shift and go to state 10
    LOGIN           shift and go to state 11
    DUE             shift and go to state 12
    BACK            shift and go to state 13
    HELP            shift and go to state 14
    SORT            shift and go to state 15
    EXIT            shift and go to state 16
    LOGOUT          shift and go to state 17
    RETURN          shift and go to state 18
    EDIT            shift and go to state 19
    DELETE          shift and go to state 20
    CREATE          shift and go to state 21
    REGISTER        shift and go to state 22

    start                          shift and go to state 1
    statement                      shift and go to state 2
    variable                       shift and go to state 3
    empty                          shift and go to state 4
    verb                           shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> statement .

    $end            reduce using rule 1 (start -> statement .)


state 3

    (2) start -> variable .

    $end            reduce using rule 2 (start -> variable .)


state 4

    (3) start -> empty .

    $end            reduce using rule 3 (start -> empty .)


state 5

    (4) statement -> verb . entity STRING
    (5) statement -> verb . entity INTEGER
    (6) statement -> verb . entity
    (7) statement -> verb . STRING
    (8) statement -> verb .
    (25) entity -> . SHELF
    (26) entity -> . BOOK
    (27) entity -> . LIBRARY

    STRING          shift and go to state 24
    $end            reduce using rule 8 (statement -> verb .)
    SHELF           shift and go to state 25
    BOOK            shift and go to state 26
    LIBRARY         shift and go to state 27

    entity                         shift and go to state 23

state 6

    (28) variable -> VARIABLE .

    $end            reduce using rule 28 (variable -> VARIABLE .)


state 7

    (9) verb -> VIEW .

    STRING          reduce using rule 9 (verb -> VIEW .)
    SHELF           reduce using rule 9 (verb -> VIEW .)
    BOOK            reduce using rule 9 (verb -> VIEW .)
    LIBRARY         reduce using rule 9 (verb -> VIEW .)
    $end            reduce using rule 9 (verb -> VIEW .)


state 8

    (10) verb -> GOTO .

    STRING          reduce using rule 10 (verb -> GOTO .)
    SHELF           reduce using rule 10 (verb -> GOTO .)
    BOOK            reduce using rule 10 (verb -> GOTO .)
    LIBRARY         reduce using rule 10 (verb -> GOTO .)
    $end            reduce using rule 10 (verb -> GOTO .)


state 9

    (11) verb -> WHERE .

    STRING          reduce using rule 11 (verb -> WHERE .)
    SHELF           reduce using rule 11 (verb -> WHERE .)
    BOOK            reduce using rule 11 (verb -> WHERE .)
    LIBRARY         reduce using rule 11 (verb -> WHERE .)
    $end            reduce using rule 11 (verb -> WHERE .)


state 10

    (12) verb -> RENT .

    STRING          reduce using rule 12 (verb -> RENT .)
    SHELF           reduce using rule 12 (verb -> RENT .)
    BOOK            reduce using rule 12 (verb -> RENT .)
    LIBRARY         reduce using rule 12 (verb -> RENT .)
    $end            reduce using rule 12 (verb -> RENT .)


state 11

    (13) verb -> LOGIN .

    STRING          reduce using rule 13 (verb -> LOGIN .)
    SHELF           reduce using rule 13 (verb -> LOGIN .)
    BOOK            reduce using rule 13 (verb -> LOGIN .)
    LIBRARY         reduce using rule 13 (verb -> LOGIN .)
    $end            reduce using rule 13 (verb -> LOGIN .)


state 12

    (14) verb -> DUE .

    STRING          reduce using rule 14 (verb -> DUE .)
    SHELF           reduce using rule 14 (verb -> DUE .)
    BOOK            reduce using rule 14 (verb -> DUE .)
    LIBRARY         reduce using rule 14 (verb -> DUE .)
    $end            reduce using rule 14 (verb -> DUE .)


state 13

    (15) verb -> BACK .

    STRING          reduce using rule 15 (verb -> BACK .)
    SHELF           reduce using rule 15 (verb -> BACK .)
    BOOK            reduce using rule 15 (verb -> BACK .)
    LIBRARY         reduce using rule 15 (verb -> BACK .)
    $end            reduce using rule 15 (verb -> BACK .)


state 14

    (16) verb -> HELP .

    STRING          reduce using rule 16 (verb -> HELP .)
    SHELF           reduce using rule 16 (verb -> HELP .)
    BOOK            reduce using rule 16 (verb -> HELP .)
    LIBRARY         reduce using rule 16 (verb -> HELP .)
    $end            reduce using rule 16 (verb -> HELP .)


state 15

    (17) verb -> SORT .

    STRING          reduce using rule 17 (verb -> SORT .)
    SHELF           reduce using rule 17 (verb -> SORT .)
    BOOK            reduce using rule 17 (verb -> SORT .)
    LIBRARY         reduce using rule 17 (verb -> SORT .)
    $end            reduce using rule 17 (verb -> SORT .)


state 16

    (18) verb -> EXIT .

    STRING          reduce using rule 18 (verb -> EXIT .)
    SHELF           reduce using rule 18 (verb -> EXIT .)
    BOOK            reduce using rule 18 (verb -> EXIT .)
    LIBRARY         reduce using rule 18 (verb -> EXIT .)
    $end            reduce using rule 18 (verb -> EXIT .)


state 17

    (19) verb -> LOGOUT .

    STRING          reduce using rule 19 (verb -> LOGOUT .)
    SHELF           reduce using rule 19 (verb -> LOGOUT .)
    BOOK            reduce using rule 19 (verb -> LOGOUT .)
    LIBRARY         reduce using rule 19 (verb -> LOGOUT .)
    $end            reduce using rule 19 (verb -> LOGOUT .)


state 18

    (20) verb -> RETURN .

    STRING          reduce using rule 20 (verb -> RETURN .)
    SHELF           reduce using rule 20 (verb -> RETURN .)
    BOOK            reduce using rule 20 (verb -> RETURN .)
    LIBRARY         reduce using rule 20 (verb -> RETURN .)
    $end            reduce using rule 20 (verb -> RETURN .)


state 19

    (21) verb -> EDIT .

    STRING          reduce using rule 21 (verb -> EDIT .)
    SHELF           reduce using rule 21 (verb -> EDIT .)
    BOOK            reduce using rule 21 (verb -> EDIT .)
    LIBRARY         reduce using rule 21 (verb -> EDIT .)
    $end            reduce using rule 21 (verb -> EDIT .)


state 20

    (22) verb -> DELETE .

    STRING          reduce using rule 22 (verb -> DELETE .)
    SHELF           reduce using rule 22 (verb -> DELETE .)
    BOOK            reduce using rule 22 (verb -> DELETE .)
    LIBRARY         reduce using rule 22 (verb -> DELETE .)
    $end            reduce using rule 22 (verb -> DELETE .)


state 21

    (23) verb -> CREATE .

    STRING          reduce using rule 23 (verb -> CREATE .)
    SHELF           reduce using rule 23 (verb -> CREATE .)
    BOOK            reduce using rule 23 (verb -> CREATE .)
    LIBRARY         reduce using rule 23 (verb -> CREATE .)
    $end            reduce using rule 23 (verb -> CREATE .)


state 22

    (24) verb -> REGISTER .

    STRING          reduce using rule 24 (verb -> REGISTER .)
    SHELF           reduce using rule 24 (verb -> REGISTER .)
    BOOK            reduce using rule 24 (verb -> REGISTER .)
    LIBRARY         reduce using rule 24 (verb -> REGISTER .)
    $end            reduce using rule 24 (verb -> REGISTER .)


state 23

    (4) statement -> verb entity . STRING
    (5) statement -> verb entity . INTEGER
    (6) statement -> verb entity .

    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    $end            reduce using rule 6 (statement -> verb entity .)


state 24

    (7) statement -> verb STRING .

    $end            reduce using rule 7 (statement -> verb STRING .)


state 25

    (25) entity -> SHELF .

    STRING          reduce using rule 25 (entity -> SHELF .)
    INTEGER         reduce using rule 25 (entity -> SHELF .)
    $end            reduce using rule 25 (entity -> SHELF .)


state 26

    (26) entity -> BOOK .

    STRING          reduce using rule 26 (entity -> BOOK .)
    INTEGER         reduce using rule 26 (entity -> BOOK .)
    $end            reduce using rule 26 (entity -> BOOK .)


state 27

    (27) entity -> LIBRARY .

    STRING          reduce using rule 27 (entity -> LIBRARY .)
    INTEGER         reduce using rule 27 (entity -> LIBRARY .)
    $end            reduce using rule 27 (entity -> LIBRARY .)


state 28

    (4) statement -> verb entity STRING .

    $end            reduce using rule 4 (statement -> verb entity STRING .)


state 29

    (5) statement -> verb entity INTEGER .

    $end            reduce using rule 5 (statement -> verb entity INTEGER .)

